@@ -1237,6 +1237,19 @@ argument_list|(
 literal|4
 argument_list|)
 block|;
+DECL|field|cachedValues
+specifier|private
+specifier|static
+specifier|final
+name|ReplicaState
+index|[]
+name|cachedValues
+init|=
+name|ReplicaState
+operator|.
+name|values
+argument_list|()
+decl_stmt|;
 DECL|field|value
 specifier|private
 specifier|final
@@ -1276,10 +1289,7 @@ name|v
 parameter_list|)
 block|{
 return|return
-name|ReplicaState
-operator|.
-name|values
-argument_list|()
+name|cachedValues
 index|[
 name|v
 index|]
@@ -1299,8 +1309,7 @@ throws|throws
 name|IOException
 block|{
 return|return
-name|values
-argument_list|()
+name|cachedValues
 index|[
 name|in
 operator|.
